Responsive to min-width:600px

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       @media (max-width: 600px) {
         font-size: 60px;
       }
+
+      @media (min-width: 600px) {
+        font-size: 90px;
+      }
     }
 
     h2 {
@@ -43,6 +47,10 @@
       @media (max-width: 600px) {
         font-size: 45px;
       }
+
+      @media (min-width: 600px) {
+        font-size: 60px;
+      }
     }
 
     h3 {
@@ -50,6 +58,10 @@
 
       @media (max-width: 600px) {
         font-size: 30px;
+      }
+
+      @media (min-width: 600px) {
+        font-size: 45px;
       }
     }
 
@@ -95,6 +107,11 @@
       justify-content: center;
 
       @media (max-width: 600px) {
+        flex-direction: column;
+        flex-direction: column-reverse;
+      }
+
+      @media (min-width: 600px) {
         flex-direction: column;
         flex-direction: column-reverse;
       }
@@ -147,6 +164,10 @@
 
       @media (max-width: 600px) {
         max-width: 260px;
+      }
+
+      @media (min-width: 600px) {
+        max-width: 300px;
       }
     }
 
