--- a/index.html
+++ b/index.html
@@ -298,7 +298,12 @@
       <section>
         <p>Por favor confirmem a vossa presença clicando no tigre!</p>
         <div style="width: 100%; text-align: center">
-          <a href="">
+          <audio src="media/cat-meow.mp3" id="cat-sound" preload="auto"></audio>
+          <a
+            href=""
+            onclick="document.getElementById('cat-sound').play()"
+            target="_blank"
+          >
             <img src="media/tigre.png" alt="tigre_foi_facil" id="tigre-img" />
           </a>
         </div>
