Adapt intro text

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           celebrarmos o nosso casamento. Imaginar este dia é, para nós, imaginar
           a felicidade de vos ter ao nosso lado, a partilhar um momento único,
           celebrando o Amor e a Família que sonhamos construir.
-          <br />Será uma alegria imensa celebrar este dia rodeados de quem nos é
+          <br />Será uma alegria imensa festejar este dia rodeados de quem nos é
           mais querido!
         </p>
         <p>
