Change picture and fill missing info

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       font-optical-sizing: auto;
       font-weight: 300;
       font-style: normal;
+      text-align: justify;
     }
 
     iframe {
@@ -229,19 +230,19 @@
       <div class="countdown">
         <section>
           <h3 id="countdown_days">-</h3>
-          <p>DIAS</p>
+          <p style="text-align: center">DIAS</p>
         </section>
         <section>
           <h3 id="countdown_hours">-</h3>
-          <p>HORAS</p>
+          <p style="text-align: center">HORAS</p>
         </section>
         <section>
           <h3 id="countdown_minutes">-</h3>
-          <p>MINUTOS</p>
+          <p style="text-align: center">MINUTOS</p>
         </section>
         <section>
           <h3 id="countdown_seconds">-</h3>
-          <p>SEGUNDOS</p>
+          <p style="text-align: center">SEGUNDOS</p>
         </section>
       </div>
       <section>
@@ -251,9 +252,10 @@
           celebrarmos o nosso casamento. Imaginar este dia é, para nós, imaginar
           a felicidade de vos ter ao nosso lado, a partilhar um momento único,
           celebrando o Amor e a Família que sonhamos construir.
-          <br />Será uma alegria imensa festejar este dia rodeados de quem nos é
-          mais querido!
+          <br /><br />Será uma alegria imensa festejar este dia rodeados de quem
+          nos é mais querido!
         </p>
+        <br />
         <p>
           <i>
             "Que venha o sol, o vinho e as flores<br />
@@ -267,6 +269,7 @@
             Que tragam prendas de alegria<br />
             E a festa dure até ser dia"<br />
           </i>
+          <br />
           in "A festa da vida"
         </p>
       </section>
@@ -300,7 +303,7 @@
         <div style="width: 100%; text-align: center">
           <audio src="media/cat-meow.mp3" id="cat-sound" preload="auto"></audio>
           <a
-            href=""
+            href="https://forms.gle/uET6bKYH6KqHwbZH8"
             onclick="document.getElementById('cat-sound').play()"
             target="_blank"
           >
@@ -317,7 +320,10 @@
           No entanto, e se ainda assim gostarem de contribuir para a nossa Lua
           de Mel, podem fazê-lo através de um dos seguintes métodos:
         </p>
-        <p>IBAN: xxxxxxxx<br />Titular: YYYY</p>
+        <p>
+          IBAN: PT50 0018 0001 00200262911 51<br />Titular: Diana Martins
+          Abrantes Leite
+        </p>
         <p>Diana Leite: 91 666 56 13</p>
         <p>Emanuel Sousa: 91 249 31 36</p>
       </section>
