Improve image sizing and responsiveness

--- a/index.html
+++ b/index.html
@@ -218,11 +218,25 @@
     <section class="title">
       <div class="header-container">
         <h1>Diana e Emanuel</h1>
-        <img
-          src="media/diana_e_emanuel_no_bg.png"
-          alt="diana_e_emanuel"
-          id="diana_emanuel_img"
-        />
+        <picture>
+          <source
+            media="(width >= 992px)"
+            srcset="media/diana_e_emanuel_no_bg_360w.png"
+          />
+          <source
+            media="(width >= 600px)"
+            srcset="media/diana_e_emanuel_no_bg_300w.png"
+          />
+          <source
+            media="(width < 600px)"
+            srcset="media/diana_e_emanuel_no_bg_260w.png"
+          />
+          <img
+            src="media/diana_e_emanuel_no_bg_360w.png"
+            alt="diana_e_emanuel"
+            id="diana_emanuel_img"
+          />
+        </picture>
       </div>
       <h2>27 junho 2026</h2>
     </section>
@@ -275,11 +289,25 @@
       </section>
       <section>
         <h2>Cerimónia</h2>
-        <img
-          src="media/igreja_no_bg_cropped.png"
-          alt="igreja"
-          id="igreja-img"
-        />
+        <picture>
+          <source
+            media="(width >= 992px)"
+            srcset="media/igreja_no_bg_cropped_950w.png"
+          />
+          <source
+            media="(width >= 600px)"
+            srcset="media/igreja_no_bg_cropped_895w.png"
+          />
+          <source
+            media="(width < 600px)"
+            srcset="media/igreja_no_bg_cropped_512w.png"
+          />
+          <img
+            src="media/igreja_no_bg_cropped_950w.png"
+            alt="igreja"
+            id="igreja-img"
+          />
+        </picture>
         <div class="details-text-container">
           <p>Igreja Paroquial de São Martinho de Cedofeita</p>
           <p>14:00 horas</p>
@@ -288,11 +316,25 @@
       </section>
       <section>
         <h2>Copo de Água</h2>
-        <img
-          src="media/quinta_no_bg_cropped.png"
-          alt="quinta"
-          id="quinta-img"
-        />
+        <picture>
+          <source
+            media="(width >= 992px)"
+            srcset="media/quinta_no_bg_cropped_950w.png"
+          />
+          <source
+            media="(width >= 600px)"
+            srcset="media/quinta_no_bg_cropped_895w.png"
+          />
+          <source
+            media="(width < 600px)"
+            srcset="media/quinta_no_bg_cropped_512w.png"
+          />
+          <img
+            src="media/quinta_no_bg_cropped_950w.png"
+            alt="quinta"
+            id="quinta-img"
+          />
+        </picture>
         <div class="details-text-container">
           <p>Quinta Alferes de Crasto</p>
           <a href="https://maps.app.goo.gl/UtHQuoD1SBsNyBK58">Localização</a>
