Add new images and date

--- a/index.html
+++ b/index.html
@@ -341,7 +341,10 @@
         </div>
       </section>
       <section>
-        <p>Por favor confirmem a vossa presença clicando no tigre!</p>
+        <p>
+          Por favor confirmem a vossa presença <b>até dia 20 de maio</b>. Podem
+          confirmar clicando no tigre!
+        </p>
         <div style="width: 100%; text-align: center">
           <audio src="media/cat-meow.mp3" id="cat-sound" preload="auto"></audio>
           <a
