Add calendar widget

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
     <title>Diana e Emanuel - 27-06-2026</title>
   </head>
+  <script
+    src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2"
+    async
+    defer
+  ></script>
   <style>
     body {
       display: flex;
@@ -258,6 +263,20 @@
           <h3 id="countdown_seconds">-</h3>
           <p style="text-align: center">SEGUNDOS</p>
         </section>
+      </div>
+      <div style="display: flex; justify-content: center">
+        <add-to-calendar-button
+          name="Casamento Diana e Emanuel"
+          label="Adicionar ao calendário"
+          options="'Apple','Google'"
+          location="Igreja Paroquial de Cedofeita"
+          startDate="2026-06-27"
+          endDate="2026-06-27"
+          startTime="14:00"
+          endTime="23:59"
+          timeZone="WET"
+          hideBranding="true"
+        ></add-to-calendar-button>
       </div>
       <section>
         <h2>Querida Família e Amigos</h2>
