--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
           name="Casamento Diana e Emanuel"
           label="Adicionar ao calendário"
           options="'Apple','Google'"
+          optionsMobile="'Apple','Google'"
           location="Igreja Paroquial de Cedofeita"
           startDate="2026-06-27"
           endDate="2026-06-27"
